--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<!DOCTYPE html>
+<html>
 <body>
-    
+
+<h2>What Can JavaScript Do?</h2>
+
+<p id="demo">JavaScript can change HTML content.</p>
+
+<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+
+<p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
+<button onclick="document.getElementById('image').src='on.jpg'">Turn on</button>
+<img src="off.jpg" alt="" id="image" style="width: 300px;">
+
+<button onclick="document.getElementById('image').src='off.jpg'">Turn off</button>
+<br>
+<button type="button" onclick="document.getElementById('demo').style.fontSize='20px'">fontchange</button>
 </body>
-<script src="first.js"></script>
 </html>
