--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <button onclick="document.getElementById('image').src='off.jpg'">Turn off</button>
 <br>
 <button type="button" onclick="document.getElementById('demo').style.fontSize='20px'">fontchange</button>
+
+<br>
+<button type="button" onclick="document.getElementById('demo').style.display='none'">Hide</button>
 </body>
 </html>
